# Game_project_template

./: .gitIgnore  CMakeLists.txt
code/: CMakeLists.txt
code/src/: main.cpp
